--- a/ttsx/templates/tt_user/register.html
+++ b/ttsx/templates/tt_user/register.html
@@ -1,4 +1,4 @@
-{% extends 'df_user/base_footer.html'%}
+{% extends 'base_footer.html'%}
  	{% block head%}
 	<script type="text/javascript" src="/static/js/register.js"></script>
 	 {% endblock head%}
