--- a/ttsx/templates/tt_user/register.html
+++ b/ttsx/templates/tt_user/register.html
@@ -16,7 +16,7 @@
 				<a href="#">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form>
+				<form method="post" action="/create/">
 				<ul>
 					<li>
 						<label>用户名:</label>
