--- a/ttsx/templates/tt_goods/index.html
+++ b/ttsx/templates/tt_goods/index.html
@@ -1,28 +1,5 @@
 {% extends 'base_top.html' %}
 {% block middle_com %}
-    <div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
-					<span>|</span>
-					<a href="register.html">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
-					<span>|</span>
-					<a href="cart.html">我的购物车</a>
-					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div class="search_bar clearfix">
 		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
@@ -51,6 +28,7 @@
 
 	<div class="center_con clearfix">
 		<ul class="subnav fl">
+
 			<li><a href="#model01" class="fruit">新鲜水果</a></li>
 			<li><a href="#model02" class="seafood">海鲜水产</a></li>
 			<li><a href="#model03" class="meet">猪牛羊肉</a></li>
@@ -80,9 +58,11 @@
 			<h3 class="fl" id="model01">新鲜水果</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for list in list0 %}
+				<a href="#">{{ list.gtitle|slice:'9' }}</a>
+{#				<a href="#">{{ list.gtitle }}加州提子</a>#}
+{#				<a href="#">{{ list.gtitle }}亚马逊牛油果</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
@@ -90,26 +70,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner01.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list01 %}
 				<li>
-					<h4><a href="#">草莓</a></h4>
-					<a href="#"><img src="/static/images/goods/goods003.jpg"></a>
-					<div class="prize">¥ 30.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:'9'}}...</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize">¥ {{goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
-					<div class="prize">¥ 5.50</div>
-				</li>
-				<li>
-					<h4><a href="#">柠檬</a></h4>
-					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
-					<div class="prize">¥ 3.90</div>
-				</li>
-				<li>
-					<h4><a href="#">奇异果</a></h4>
-					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>
-					<div class="prize">¥ 25.80</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
+{#					<div class="prize">¥ 5.50</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">柠檬</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
+{#					<div class="prize">¥ 3.90</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">奇异果</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>#}
+{#					<div class="prize">¥ 25.80</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
@@ -119,8 +101,10 @@
 			<h3 class="fl" id="model02">海鲜水产</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">河虾</a>
-				<a href="#">扇贝</a>
+                {% for list in list1 %}
+				<a href="#">{{ list.gtitle|slice:'9' }}..</a>
+{#				<a href="#">扇贝</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -128,26 +112,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner02.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list11 %}
 				<li>
-					<h4><a href="#">青岛野生海捕大青虾</a></h4>
-					<a href="#"><img src="/static/images/goods/goods018.jpg"></a>
-					<div class="prize">¥ 48.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:'9' }}..</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">扇贝</a></h4>
-					<a href="#"><img src="/static/images/goods/goods019.jpg"></a>
-					<div class="prize">¥ 46.00</div>
-				</li>
-				<li>
-					<h4><a href="#">冷冻秋刀鱼</a></h4>
-					<a href="#"><img src="/static/images/goods/goods020.jpg"></a>
-					<div class="prize">¥ 19.00</div>
-				</li>
-				<li>
-					<h4><a href="#">基围虾</a></h4>
-					<a href="#"><img src="/static/images/goods/goods021.jpg"></a>
-					<div class="prize">¥ 25.00</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">扇贝</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods019.jpg"></a>#}
+{#					<div class="prize">¥ 46.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">冷冻秋刀鱼</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods020.jpg"></a>#}
+{#					<div class="prize">¥ 19.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">基围虾</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods/goods021.jpg"></a>#}
+{#					<div class="prize">¥ 25.00</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
@@ -157,9 +143,11 @@
 			<h3 class="fl" id="model03">猪牛羊肉</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for list in list2 %}
+				<a href="#">{{ list.gtitle|slice:'6'}}</a>
+{#				<a href="#">加州提子</a>#}
+{#				<a href="#">亚马逊牛油果</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -167,26 +155,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner03.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list21 %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:'6' }}..</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize"> ¥ {{ goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
@@ -196,9 +186,11 @@
 			<h3 class="fl" id="model04">禽类蛋品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for list in list3 %}
+				<a href="#">{{ list.gtitle|slice:'8' }}..</a>
+{#				<a href="#">加州提子</a>#}
+{#				<a href="#">亚马逊牛油果</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -206,26 +198,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner04.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list31 %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:"8" }}..</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
@@ -235,9 +229,11 @@
 			<h3 class="fl" id="model05">新鲜蔬菜</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for list in list4 %}
+				<a href="#">{{ list.gtitle|slice:'8' }}..</a>
+{#				<a href="#">加州提子</a>#}
+{#				<a href="#">亚马逊牛油果</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -245,26 +241,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner05.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list41 %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:"8" }}..</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
@@ -274,9 +272,11 @@
 			<h3 class="fl" id="model06">速冻食品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+                {% for list in list5 %}
+				<a href="#">{{ list.gtitle|slice:"6" }}..</a>
+{#				<a href="#">加州提子</a>#}
+{#				<a href="#">亚马逊牛油果</a>#}
+                {% endfor %}
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -284,26 +284,28 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner06.jpg"></div>
 			<ul class="goods_list fl">
+                {% for goods in list51 %}
 				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
+					<h4><a href="#">{{ goods.gtitle|slice:'6' }}..</a></h4>
+					<a href="#"><img src="/static/{{ goods.gpic }}"></a>
+					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
+{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
+{#					<div class="prize">¥ 38.00</div>#}
+{#				</li>#}
 			</ul>
 		</div>
 	</div>
