--- a/ttsx/templates/tt_goods/list.html
+++ b/ttsx/templates/tt_goods/list.html
@@ -37,12 +37,12 @@
 				<h3>新品推荐</h3>
 				<ul>
 					<li>
-						<a href="#"><img src="images/goods/goods001.jpg"></a>
+						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
 						<h4><a href="#">进口柠檬</a></h4>
 						<div class="prize">￥3.90</div>
 					</li>
 					<li>
-						<a href="#"><img src="images/goods/goods002.jpg"></a>
+						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
 						<h4><a href="#">玫瑰香葡萄</a></h4>
 						<div class="prize">￥16.80</div>
 					</li>
@@ -58,152 +58,157 @@
 			</div>
 
 			<ul class="goods_type_list clearfix">
-				<li>
-					<a href="detail.html"><img src="images/goods/goods003.jpg"></a>
-					<h4><a href="detail.html">大兴大棚草莓</a></h4>
+				{% for goods in list %}
+                <li>
+					<a href="detail.html"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="detail.html">{{ goods.gtitle }}</a></h4>
 					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
+						<span class="prize">{{ goods.gprice}}</span>
+						<span class="unit">{{ goods.gprice}}/{{ goods.gunit }}</span>
 						<a href="#" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods004.jpg"></a>
-					<h4><a href="#">吐鲁番梨光杏</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.50</span>
-						<span class="unit">5.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods005.jpg"></a>
-					<h4><a href="#">黄肉桃</a></h4>
-					<div class="operate">
-						<span class="prize">￥10.00</span>
-						<span class="unit">10.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods006.jpg"></a>
-					<h4><a href="#">进口西梅</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods007.jpg"></a>
-					<h4><a href="#">香梨</a></h4>
-					<div class="operate">
-						<span class="prize">￥6.45</span>
-						<span class="unit">6.45/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods008.jpg"></a>
-					<h4><a href="#">栗子</a></h4>
-					<div class="operate">
-						<span class="prize">￥9.50</span>
-						<span class="unit">9.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods009.jpg"></a>
-					<h4><a href="#">海南香蕉</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.30</span>
-						<span class="unit">3.30/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods010.jpg"></a>
-					<h4><a href="#">青苹果</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.00</span>
-						<span class="unit">5.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods011.jpg"></a>
-					<h4><a href="#">山莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods012.jpg"></a>
-					<h4><a href="#">奇异果</a></h4>
-					<div class="operate">
-						<span class="prize">￥25.80</span>
-						<span class="unit">25.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods013.jpg"></a>
-					<h4><a href="#">蜜桔</a></h4>
-					<div class="operate">
-						<span class="prize">￥4.80</span>
-						<span class="unit">4.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods014.jpg"></a>
-					<h4><a href="#">脐橙</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.50</span>
-						<span class="unit">3.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods001.jpg"></a>
-					<h4><a href="#">进口柠檬</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.90</span>
-						<span class="unit">3.90/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods002.jpg"></a>
-					<h4><a href="#">玫瑰香葡萄</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
+                {% endfor %}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods004.jpg"></a>#}
+{#					<h4><a href="#">吐鲁番梨光杏</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥5.50</span>#}
+{#						<span class="unit">5.50/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods005.jpg"></a>#}
+{#					<h4><a href="#">黄肉桃</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥10.00</span>#}
+{#						<span class="unit">10.00/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods006.jpg"></a>#}
+{#					<h4><a href="#">进口西梅</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥28.80</span>#}
+{#						<span class="unit">28.8/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods007.jpg"></a>#}
+{#					<h4><a href="#">香梨</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥6.45</span>#}
+{#						<span class="unit">6.45/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods008.jpg"></a>#}
+{#					<h4><a href="#">栗子</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥9.50</span>#}
+{#						<span class="unit">9.50/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods009.jpg"></a>#}
+{#					<h4><a href="#">海南香蕉</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥3.30</span>#}
+{#						<span class="unit">3.30/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods010.jpg"></a>#}
+{#					<h4><a href="#">青苹果</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥5.00</span>#}
+{#						<span class="unit">5.00/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods011.jpg"></a>#}
+{#					<h4><a href="#">山莓</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥28.80</span>#}
+{#						<span class="unit">28.8/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{##}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>#}
+{#					<h4><a href="#">奇异果</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥25.80</span>#}
+{#						<span class="unit">25.8/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods013.jpg"></a>#}
+{#					<h4><a href="#">蜜桔</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥4.80</span>#}
+{#						<span class="unit">4.8/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods014.jpg"></a>#}
+{#					<h4><a href="#">脐橙</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥3.50</span>#}
+{#						<span class="unit">3.50/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
+{#					<h4><a href="#">进口柠檬</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥3.90</span>#}
+{#						<span class="unit">3.90/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
+{#				<li>#}
+{#					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
+{#					<h4><a href="#">玫瑰香葡萄</a></h4>#}
+{#					<div class="operate">#}
+{#						<span class="prize">￥16.80</span>#}
+{#						<span class="unit">16.80/500g</span>#}
+{#						<a href="#" class="add_goods" title="加入购物车"></a>#}
+{#					</div>#}
+{#				</li>#}
 			</ul>
 
 			<div class="pagenation">
-				<a href="#"><上一页</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#">5</a>
+                <a href="#">上一页</a>
+                {% for pindex in list.paginator.page_range %}
+                <a href="/list{{ pindex }}/" class="active">{{ pindex }}</a>
+                {% endfor %}
+{#				<a href="#" class="active">1</a>#}
+{#				<a href="#">2</a>#}
+{#				<a href="#">3</a>#}
+{#				<a href="#">4</a>#}
+{#				<a href="#">5</a>#}
 				<a href="#">下一页></a>
 			</div>
+
 		</div>
 	</div>
 
