--- a/ttsx/templates/tt_user/register.html
+++ b/ttsx/templates/tt_user/register.html
@@ -38,6 +38,12 @@
 						<input type="text" name="email" id="email">
 						<span class="error_tip">提示信息</span>
 					</li>
+                    <li>
+						<label>验证码:</label>
+						<input type="text" name="code" id="code">
+                         <img src="/user/verifycode/?1" class="register_code_img">
+                        <span class="error_tip">提示信息</span>
+					</li>
 					<li class="agreement">
 						<input type="checkbox" name="allow" id="allow" checked="checked">
 						<label>同意”天天生鲜用户使用协议“</label>
