--- a/ttsx/static/css/main.css
+++ b/ttsx/static/css/main.css
@@ -291,20 +291,22 @@ html,body{height:100%}
 
 .form_input{width:308px;height:250px;margin:20px auto;position:relative;}
 .name_input,.pass_input{width:306px;height:36px;border:1px solid #e0e0e0;background:url(../images/icons02.png) 280px -41px no-repeat #f8f8f8;outline:none;font-size:14px;text-indent:10px;position: absolute;left:0;top:0}
-.pass_input{top:65px;background-position:280px -95px;}
-
-.user_error,.pwd_error{color:#f00;position:absolute;left:0;top:43px;display:none}
+.pass_input{top:70px;background-position:280px -95px;}
+.syzm{width:100px;height:36px;border:1px solid #e0e0e0;outline:none;font-size:14px;text-indent:10px;position: absolute;left:0;top:130px}
+.yzm{border:1px solid #e0e0e0;outline:none;text-indent:10px;position: absolute;left:110px;top:130px}
+.aaa{position: absolute;left:220px;top:150px;height:12px;line-height: 12px;}
+.user_error,.pwd_error{color:#f00;position:absolute;left:0;top:43px;display:none ;width:100px;height:12px;}
 
 .pwd_error{top:110px;}
 
-.more_input{position:absolute;left:0;top:130px;width:100%}
+.more_input{position:absolute;left:0;top:180px;width:100%}
 
 .more_input input{float:left;margin-top:2px;}
 .more_input label{float:left;margin-left:10px;}
 .more_input a{float:right;color:#666}
 .more_input a:hover{color:#ff8800}
 
-.input_submit{width:100%;height:40px;position:absolute;left:0;top:180px;background-color:#47aa34;color:#fff;font-size:22px;border:0px;font-family:'Microsoft Yahei';cursor:pointer;}
+.input_submit{width:100%;height:40px;position:absolute;left:0;top:220px;background-color:#47aa34;color:#fff;font-size:22px;border:0px;font-family:'Microsoft Yahei';cursor:pointer;}
 
 
 /* 注册页面 */
