--- a/ttsx/templates/tt_user/register.html
+++ b/ttsx/templates/tt_user/register.html
@@ -1,5 +1,6 @@
 {% extends 'base_footer.html'%}
  	{% block head%}
+        <script type="text/ecmascript" src="/static/js/sha1.js"></script>
 	<script type="text/javascript" src="/static/js/register.js"></script>
 	 {% endblock head%}
 {% block body %}
@@ -13,7 +14,7 @@
 		<div class="r_con fr">
 			<div class="reg_title clearfix">
 				<h1>用户注册</h1>
-				<a href="#">登录</a>
+				<a href="/login/">登录</a>
 			</div>
 			<div class="reg_form clearfix">
 				<form method="post" action="/create/">
