--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -1,95 +1,137 @@
 {% extends 'base_top.html' %}
+
+{% block head %}
+    <script>
+        $(function () {
+            {# 加减的点击事件 #}
+            var value = $(".num_show").val();
+            {#       $('.add').click(function () {#}
+            {#           value = parseInt(value);#}
+            {#          value+=1;#}
+            {#           $('.num_show').val(value);#}
+
+            {#       });#}
+            value = parseInt(value);
+            $('.num_add').delegate('a', 'click', function () {
+                if ($(this).html() == "+") {
+                    value += 1;
+                } else {
+                    value -= 1;
+                    if (value <= 1) {
+                        value = 1;
+                    }
+                }
+                $('.num_show').val(value);
+
+
+                {# 总价的计算 #}
+                var price = $(".show_pirze em").html();
+                price = parseFloat(price);
+                var sum = value *price;
+                sum = sum.toFixed(2);
+                $(".total em").html(sum)
+            });
+        });
+
+    </script>
+{% endblock head %}
+
 {% block middle_com %}
-	<div class="navbar_con">
-		<div class="navbar clearfix">
-			<div class="subnav_con fl">
-				<h1>全部商品分类</h1>
-				<span></span>
-				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
-					<li><a href="#" class="seafood">海鲜水产</a></li>
-					<li><a href="#" class="meet">猪牛羊肉</a></li>
-					<li><a href="#" class="egg">禽类蛋品</a></li>
-					<li><a href="#" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="#" class="ice">速冻食品</a></li>
-				</ul>
-			</div>
-			<ul class="navlist fl">
-				<li><a href="">首页</a></li>
-				<li class="interval">|</li>
-				<li><a href="">手机生鲜</a></li>
-				<li class="interval">|</li>
-				<li><a href="">抽奖</a></li>
-			</ul>
-		</div>
-	</div>
+    <div class="navbar_con">
+        <div class="navbar clearfix">
+            <div class="subnav_con fl">
+                <h1>全部商品分类</h1>
+                <span></span>
+                <ul class="subnav">
+                    <li><a href="/list1_1/" class="fruit">新鲜水果</a></li>
+                    <li><a href="/list2_1/" class="seafood">海鲜水产</a></li>
+                    <li><a href="/list3_1/" class="meet">猪牛羊肉</a></li>
+                    <li><a href="/list4_1/" class="egg">禽类蛋品</a></li>
+                    <li><a href="/list5_1/" class="vegetables">新鲜蔬菜</a></li>
+                    <li><a href="/list6_1/" class="ice">速冻食品</a></li>
+                </ul>
+            </div>
+            <ul class="navlist fl">
+                <li><a href="/">首页</a></li>
+                <li class="interval">|</li>
+                <li><a href="">手机生鲜</a></li>
+                <li class="interval">|</li>
+                <li><a href="">抽奖</a></li>
+            </ul>
+        </div>
+    </div>
 
-	<div class="breadcrumb">
-		<a href="#">全部分类</a>
-		<span>></span>
-		<a href="#">新鲜水果</a>
-		<span>></span>
-		<a href="#">商品详情</a>
-	</div>
+    <div class="breadcrumb">
+        <a href="#">全部分类</a>
+        <span>></span>
+        <a href="/list{{ goods.gtype.id }}_1/">{{ goods.gtype }}</a>
+        <span>></span>
+        <a href="#">商品详情</a>
+    </div>
 
-	<div class="goods_detail_con clearfix">
-		<div class="goods_detail_pic fl"><img src="/static/images/goods_detail.jpg"></div>
+    <div class="goods_detail_con clearfix">
+        <div class="goods_detail_pic fl"><img src="/static/{{ goods.gpic }}"></div>
 
-		<div class="goods_detail_list fr">
-			<h3>大兴大棚草莓</h3>
-			<p>草莓浆果柔软多汁，味美爽口，适合速冻保鲜贮藏。草莓速冻后，可以保持原有的色、香、味，既便于贮藏，又便于外销。</p>
-			<div class="prize_bar">
-				<span class="show_pirze">¥<em>16.80</em></span>
-				<span class="show_unit">单  位：500g</span>
-			</div>
-			<div class="goods_num clearfix">
-				<div class="num_name fl">数 量：</div>
-				<div class="num_add fl">
-					<input type="text" class="num_show fl" value="1">
-					<a href="javascript:;" class="add fr">+</a>
-					<a href="javascript:;" class="minus fr">-</a>
-				</div>
-			</div>
-			<div class="total">总价：<em>16.80元</em></div>
-			<div class="operate_btn">
-				<a href="javascript:;" class="buy_btn">立即购买</a>
-				<a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
-			</div>
-		</div>
-	</div>
+        <div class="goods_detail_list fr">
 
-	<div class="main_wrap clearfix">
-		<div class="l_wrap fl clearfix">
-			<div class="new_goods">
-				<h3>新品推荐</h3>
-				<ul>
-					<li>
-						<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
-						<h4><a href="#">进口柠檬</a></h4>
-						<div class="prize">￥3.90</div>
-					</li>
-					<li>
-						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
-						<h4><a href="#">玫瑰香葡萄</a></h4>
-						<div class="prize">￥16.80</div>
-					</li>
-				</ul>
-			</div>
-		</div>
+            <h3>{{ goods.gtitle }}</h3>
+            <p>{{ goods.gjianjie }}</p>
+            <div class="prize_bar">
+                <span class="show_pirze">¥<em>{{ goods.gprice }}</em></span>
+                <span class="show_unit">单  位：{{ goods.gunit }}</span>
+            </div>
+            <div class="goods_num clearfix">
+                <div class="num_name fl">数 量：</div>
+                <div class="num_add fl">
+                    <input type="text" class="num_show fl" value="1">
+                    <a href="javascript:;" class="add fr">+</a>
+                    <a href="javascript:;" class="minus fr">-</a>
+                </div>
+            </div>
+            <div class="total">总价：<em>{{ goods.gprice }}</em></div>
+            <div class="operate_btn">
+                <a href="javascript:;" class="buy_btn">立即购买</a>
+                <a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
+            </div>
+        </div>
+    </div>
 
-		<div class="r_wrap fr clearfix">
-			<ul class="detail_tab clearfix">
-				<li class="active">商品介绍</li>
-				<li>评论</li>
-			</ul>
+    <div class="main_wrap clearfix">
+        <div class="l_wrap fl clearfix">
+            <div class="new_goods">
+                <h3>新品推荐</h3>
+                <ul>
+                    {% for goods in list %}
+                        <li>
+                            <a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+                            <h4><a href="/{{ goods.id }}">{{ goods.gtitle }}</a></h4>
+                            <div class="prize">￥ {{ goods.gprice }}</div>
+                        </li>
+                    {% endfor %}
+                    {#					<li>#}
+                    {#						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
+                    {#						<h4><a href="#">玫瑰香葡萄</a></h4>#}
+                    {#						<div class="prize">￥16.80</div>#}
+                    {#					</li>#}
+                </ul>
+            </div>
+        </div>
 
-			<div class="tab_content">
-				<dl>
-					<dt>商品详情：</dt>
-					<dd>草莓采摘园位于北京大兴区 庞各庄镇四各庄村 ，每年1月-6月面向北京以及周围城市提供新鲜草莓采摘和精品礼盒装草莓，草莓品种多样丰富，个大香甜。所有草莓均严格按照有机标准培育，不使用任何化肥和农药。草莓在采摘期间免洗可以直接食用。欢迎喜欢草莓的市民前来采摘，也欢迎各大单位选购精品有机草莓礼盒，有机草莓礼盒是亲朋馈赠、福利送礼的最佳选择。 </dd>
-				</dl>
-			</div>
+        <div class="r_wrap fr clearfix">
+            <ul class="detail_tab clearfix">
+                <li class="active">商品介绍</li>
+                <li>评论</li>
+            </ul>
 
-		</div>
-	</div>
-{% endblock middle_com%}
+            <div class="tab_content">
+
+                <dl>
+                    <dt>商品详情：</dt>
+                    <dd>{{ goods.gcontent|safe }} </dd>
+                </dl>
+
+            </div>
+
+        </div>
+    </div>
+{% endblock middle_com %}
