--- a/ttsx/templates/tt_user/register.html
+++ b/ttsx/templates/tt_user/register.html
@@ -14,10 +14,10 @@
 		<div class="r_con fr">
 			<div class="reg_title clearfix">
 				<h1>用户注册</h1>
-				<a href="/login/">登录</a>
+				<a href="/user/login/">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form method="post" action="/create/">
+				<form method="post" action="/user/create/" id="reg_form">
 				<ul>
 					<li>
 						<label>用户名:</label>
