--- a/ttsx/templates/tt_cart/base_cart.html
+++ b/ttsx/templates/tt_cart/base_cart.html
@@ -27,22 +27,11 @@
 					<span>|</span>
 					<a href="user_center_info.html">用户中心</a>
 					<span>|</span>
-					<a href="/cart/">我的购物车</a>
+					<a href="cart.html">我的购物车</a>
 					<span>|</span>
 					<a href="user_center_order.html">我的订单</a>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="search_bar clearfix">
-		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-		<div class="guest_cart fr">
-			<a href="/cart/" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl">1</div>
 		</div>
 	</div>
 
