--- a/ttsx/templates/tt_cart/cart.html
+++ b/ttsx/templates/tt_cart/cart.html
@@ -1,4 +1,4 @@
-{% extends 'base_top.html' %}
+{% extends 'tt_cart/base_cart.html'  %}
 
 
 
@@ -212,7 +212,7 @@
 {% block middle_com %}
 
     <div class="search_bar clearfix">
-        <a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+        <a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
         <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
         <div class="search_con fr">
             <input type="text" class="input_text fl" name="" placeholder="搜索商品">
