--- a/ttsx/templates/base_top.html
+++ b/ttsx/templates/base_top.html
@@ -2,6 +2,7 @@
 	 {% block head%}
 	<script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
+         <script src="/static/js/list.js"></script>
 	 {% endblock head%}
 
 
