--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -1,39 +1,7 @@
 {% extends 'base_top.html' %}
 
 {% block head %}
-    <script>
-        $(function () {
-            {# 加减的点击事件 #}
-            var value = $(".num_show").val();
-            {#       $('.add').click(function () {#}
-            {#           value = parseInt(value);#}
-            {#          value+=1;#}
-            {#           $('.num_show').val(value);#}
-
-            {#       });#}
-            value = parseInt(value);
-            $('.num_add').delegate('a', 'click', function () {
-                if ($(this).html() == "+") {
-                    value += 1;
-                } else {
-                    value -= 1;
-                    if (value <= 1) {
-                        value = 1;
-                    }
-                }
-                $('.num_show').val(value);
-
-
-                {# 总价的计算 #}
-                var price = $(".show_pirze em").html();
-                price = parseFloat(price);
-                var sum = value *price;
-                sum = sum.toFixed(2);
-                $(".total em").html(sum)
-            });
-        });
-
-    </script>
+    <script src="/static/js/detail.js"></script>
 {% endblock head %}
 
 {% block middle_com %}
@@ -108,11 +76,6 @@
                             <div class="prize">￥ {{ goods.gprice }}</div>
                         </li>
                     {% endfor %}
-                    {#					<li>#}
-                    {#						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
-                    {#						<h4><a href="#">玫瑰香葡萄</a></h4>#}
-                    {#						<div class="prize">￥16.80</div>#}
-                    {#					</li>#}
                 </ul>
             </div>
         </div>
