--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -59,6 +59,8 @@
             <div class="total">总价：<em>{{ goods.gprice }}</em></div>
             <div class="operate_btn">
                 <a href="javascript:;" class="buy_btn">立即购买</a>
+                <div class="move_cart"></div>
+                <input type="hidden" name="goods_id" value="{{ goods.id }}">
                 <a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
             </div>
         </div>
