--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -1,41 +1,8 @@
 {% extends 'base_top.html' %}
 
 {% block head %}
-    <script>
-        $(function () {
-            {# 加减的点击事件 #}
-            var value = $(".num_show").val();
-            {#       $('.add').click(function () {#}
-            {#           value = parseInt(value);#}
-            {#          value+=1;#}
-            {#           $('.num_show').val(value);#}
-
-            {#       });#}
-            value = parseInt(value);
-            $('.num_add').delegate('a', 'click', function () {
-                if ($(this).html() == "+") {
-                    value += 1;
-                } else {
-                    value -= 1;
-                    if (value <= 1) {
-                        value = 1;
-                    }
-                }
-                $('.num_show').val(value);
-
-
-                {# 总价的计算 #}
-                var price = $(".show_pirze em").html();
-                price = parseFloat(price);
-                var sum = value *price;
-                sum = sum.toFixed(2);
-                $(".total em").html(sum)
-            });
-        });
-
-    </script>
+    <script src="/static/js/detail.js"></script>
 {% endblock head %}
-
 {% block middle_com %}
     <div class="navbar_con">
         <div class="navbar clearfix">
@@ -43,12 +10,12 @@
                 <h1>全部商品分类</h1>
                 <span></span>
                 <ul class="subnav">
-                    <li><a href="/list1_1/" class="fruit">新鲜水果</a></li>
-                    <li><a href="/list2_1/" class="seafood">海鲜水产</a></li>
-                    <li><a href="/list3_1/" class="meet">猪牛羊肉</a></li>
-                    <li><a href="/list4_1/" class="egg">禽类蛋品</a></li>
-                    <li><a href="/list5_1/" class="vegetables">新鲜蔬菜</a></li>
-                    <li><a href="/list6_1/" class="ice">速冻食品</a></li>
+                    <li><a href="/list1_1_1/" class="fruit">新鲜水果</a></li>
+                    <li><a href="/list2_1_1/" class="seafood">海鲜水产</a></li>
+                    <li><a href="/list3_1_1/" class="meet">猪牛羊肉</a></li>
+                    <li><a href="/list4_1_1/" class="egg">禽类蛋品</a></li>
+                    <li><a href="/list5_1_1/" class="vegetables">新鲜蔬菜</a></li>
+                    <li><a href="/list6_1_1/" class="ice">速冻食品</a></li>
                 </ul>
             </div>
             <ul class="navlist fl">
@@ -62,9 +29,9 @@
     </div>
 
     <div class="breadcrumb">
-        <a href="#">全部分类</a>
+        <a href="/">全部分类</a>
         <span>></span>
-        <a href="/list{{ goods.gtype.id }}_1/">{{ goods.gtype }}</a>
+        <a href="/list{{ goods.gtype.id }}_1_1/">{{ goods.gtype }}</a>
         <span>></span>
         <a href="#">商品详情</a>
     </div>
@@ -108,11 +75,7 @@
                             <div class="prize">￥ {{ goods.gprice }}</div>
                         </li>
                     {% endfor %}
-                    {#					<li>#}
-                    {#						<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
-                    {#						<h4><a href="#">玫瑰香葡萄</a></h4>#}
-                    {#						<div class="prize">￥16.80</div>#}
-                    {#					</li>#}
+
                 </ul>
             </div>
         </div>
