--- a/ttsx/templates/tt_goods/index.html
+++ b/ttsx/templates/tt_goods/index.html
@@ -1,18 +1,6 @@
 {% extends 'base_top.html' %}
 {% block middle_com %}
 
-	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-		<div class="guest_cart fr">
-			<a href="/cart/" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">1</div>
-		</div>
-	</div>
-
 	<div class="navbar_con">
 		<div class="navbar">
 			<h1 class="fl">全部商品分类</h1>
@@ -60,11 +48,10 @@
 				<span>|</span>
                 {% for list in list0 %}
 				<a href="{{ list.id }}">{{ list.gtitle|slice:'9' }}</a>
-{#				<a href="#">{{ list.gtitle }}加州提子</a>#}
-{#				<a href="#">{{ list.gtitle }}亚马逊牛油果</a>#}
+
                 {% endfor %}
 			</div>
-			<a href="/list1_1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/list1_1_1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -72,26 +59,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list01 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:'9'}}...</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:'9'}}...</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize">¥ {{goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>#}
-{#					<div class="prize">¥ 5.50</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">柠檬</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>#}
-{#					<div class="prize">¥ 3.90</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">奇异果</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>#}
-{#					<div class="prize">¥ 25.80</div>#}
-{#				</li>#}
+
 			</ul>
 		</div>
 	</div>
@@ -102,11 +75,10 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for list in list1 %}
-				<a href="/{{ list.id }}">{{ list.gtitle|slice:'9' }}..</a>
-{#				<a href="#">扇贝</a>#}
+				<a href="/{{ list.id }}/">{{ list.gtitle|slice:'9' }}..</a>
                 {% endfor %}
 			</div>
-			<a href="/list2_1/" class="goods_more fr">查看更多></a>
+			<a href="/list{{ tlist.1.id }}_1_1/" class="goods_more fr">查看更多></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -114,26 +86,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list11 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:'9' }}..</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:'9' }}..</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">扇贝</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods019.jpg"></a>#}
-{#					<div class="prize">¥ 46.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">冷冻秋刀鱼</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods020.jpg"></a>#}
-{#					<div class="prize">¥ 19.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">基围虾</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods/goods021.jpg"></a>#}
-{#					<div class="prize">¥ 25.00</div>#}
-{#				</li>#}
+
 			</ul>
 		</div>
 	</div>
@@ -144,12 +102,10 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for list in list2 %}
-				<a href="/{{ list.id }}">{{ list.gtitle|slice:'6'}}</a>
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
+				<a href="/{{ list.id }}/">{{ list.gtitle|slice:'6'}}</a>
                 {% endfor %}
 			</div>
-			<a href="/list3_1/" class="goods_more fr">查看更多 ></a>
+			<a href="/list3_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -157,26 +113,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list21 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:'6' }}..</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:'6' }}..</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize"> ¥ {{ goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
+
 			</ul>
 		</div>
 	</div>
@@ -187,12 +129,11 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for list in list3 %}
-				<a href="/{{ list.id }}">{{ list.gtitle|slice:'8' }}..</a>
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
+				<a href="/{{ list.id }}/">{{ list.gtitle|slice:'8' }}..</a>
+
                 {% endfor %}
 			</div>
-			<a href="/list4_1/" class="goods_more fr">查看更多 ></a>
+			<a href="/list4_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -200,26 +141,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list31 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:"8" }}..</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:"8" }}..</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
+{
 			</ul>
 		</div>
 	</div>
@@ -230,12 +157,11 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for list in list4 %}
-				<a href="/{{ list.id }}">{{ list.gtitle|slice:'8' }}..</a>
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
+				<a href="/{{ list.id }}/">{{ list.gtitle|slice:'8' }}..</a>
+
                 {% endfor %}
 			</div>
-			<a href="/list5_1/" class="goods_more fr">查看更多 ></a>
+			<a href="/list5_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -243,26 +169,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list41 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:"8" }}..</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:"8" }}..</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
+
 			</ul>
 		</div>
 	</div>
@@ -273,12 +185,11 @@
 			<div class="subtitle fl">
 				<span>|</span>
                 {% for list in list5 %}
-				<a href="/{{ list.id }}">{{ list.gtitle|slice:"6" }}..</a>
-{#				<a href="#">加州提子</a>#}
-{#				<a href="#">亚马逊牛油果</a>#}
+				<a href="/{{ list.id }}/">{{ list.gtitle|slice:"6" }}..</a>
+
                 {% endfor %}
 			</div>
-			<a href="/list6_1/" class="goods_more fr">查看更多 ></a>
+			<a href="/list6_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -286,26 +197,12 @@
 			<ul class="goods_list fl">
                 {% for goods in list51 %}
 				<li>
-					<h4><a href="/{{ goods.id }}">{{ goods.gtitle|slice:'6' }}..</a></h4>
-					<a href="/{{ goods.id }}"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">{{ goods.gtitle|slice:'6' }}..</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
 					<div class="prize">¥ {{ goods.gprice }}</div>
 				</li>
                 {% endfor %}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
-{#				<li>#}
-{#					<h4><a href="#">维多利亚葡萄</a></h4>#}
-{#					<a href="#"><img src="/static/images/goods.jpg"></a>#}
-{#					<div class="prize">¥ 38.00</div>#}
-{#				</li>#}
+
 			</ul>
 		</div>
 	</div>
